--- a/src/theme.scss
+++ b/src/theme.scss
@@ -28,7 +28,7 @@ $md-mcgpalette0: (
   900: #1d1d1d,
   A100: #f0cf78,
   A200: #ebbc4a,
-  A400: red,
+  A400: rgb(240, 54, 29),
   A700: #e99300,
   contrast: (
     50: #000000,
