added carousel component, added carousel, text to about

--- a/src/app/blocks/footer/footer.component.html
+++ b/src/app/blocks/footer/footer.component.html
@@ -20,10 +20,19 @@
   </mat-card> -->
   <div class="footer-copyright">
     <mat-card
-      style="background-color: #424242; color: white; border-radius: 0;"
+      style="
+        background-color: #424242;
+        color: rgb(245, 245, 245);
+        border-radius: 0;
+      "
     >
-      © 2020 All Rights Reserved
-      <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
+      <p style="">
+        © 2020 All Rights Reserved
+        <!-- <a class="grey-text text-lighten-4 right" href="#!">More Links</a> -->
+
+        &nbsp; | &nbsp; ThriftyPrint is a part of
+        <a href="https://www.thethriftybot.com/">The Thrifty Bot</a>
+      </p>
     </mat-card>
   </div>
 </footer>
