--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -3,7 +3,7 @@
 <div class="w3-main" style="max-width: 1250px; margin: auto">
   <div class="w3-row-padding">
     <div class="w3-col s12 m8 l9">
-      <mat-card id="engine" style="">
+      <mat-card id="engine">
         <mat-progress-bar
           *ngIf="loading"
           mode="indeterminate"
@@ -173,7 +173,8 @@
         <mat-card-title>Order</mat-card-title>
         <mat-card-content
           >Your model will be printed on a MarkForged 3D Printer using Onyx
-          filament.</mat-card-content
+          filament. Find out more on the
+          <a href="/about">about page.</a></mat-card-content
         >
       </mat-card>
       <mat-card>
