--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -30,6 +30,13 @@
               width="100%"
               height="100px"
             ></canvas>
+            <p
+              style="position: absolute; top: 90%; left: 50%"
+              *ngIf="!printVolumeFit"
+              style="color: red"
+            >
+              Model does not fit print bed!
+            </p>
           </div>
         </div>
         <div class="w3-row">
@@ -228,9 +235,10 @@
           </div>
           <mat-divider [inset]="true"></mat-divider>
           <p>*Does not include shipping costs</p>
+
           <div>
             <button
-              [disabled]="!formDisplay || !validModel"
+              [disabled]="!formDisplay || !validModel || !printVolumeFit"
               mat-flat-button
               color="accent"
               class="button"
@@ -244,7 +252,7 @@
           </div>
           <div>
             <button
-              [disabled]="!formDisplay || !validModel"
+              [disabled]="!formDisplay || !validModel || !printVolumeFit"
               mat-flat-button
               color="accent"
               class="button"
