--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -36,7 +36,7 @@
       <button mat-raised-button color="accent" type="submit" *ngIf="!isLoading">
         Login
       </button>
-      <span style="margin-left: 8px;"
+      <span style="margin-left: 8px"
         >Dont have an account?
         <a [routerLink]="['/auth/signup']">signup</a> here
       </span>
