added link and /verify, added link style

--- a/src/app/auth/verify-prompt/verify-prompt.component.html
+++ b/src/app/auth/verify-prompt/verify-prompt.component.html
@@ -5,5 +5,9 @@
     <mat-card-content>
       Please check your inbox and verify your email before logging in.
     </mat-card-content>
+    <mat-card-content>
+      If you don't see an email in your inbox in the next few minutes, go
+      <a href="/auth/verify/resend">here</a> to request a new verification email
+    </mat-card-content>
   </mat-card>
 </div>
