--- a/src/app/main/about/about.component.scss
+++ b/src/app/main/about/about.component.scss
@@ -8,3 +8,22 @@
 .paragraph {
   font-size: 16px;
 }
+
+a {
+  text-decoration: none;
+}
+
+a:link {
+  text-decoration: none;
+  color: #f0361d;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #f0361d;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: rgb(150, 0, 0);
+}
