--- a/src/app/main/main/main.component.scss
+++ b/src/app/main/main/main.component.scss
@@ -60,3 +60,22 @@ mat-radio-button {
   border: 0;
   background-color: white;
 }
+
+a {
+  text-decoration: none;
+}
+
+a:link {
+  text-decoration: none;
+  color: #f0361d;
+}
+
+a:visited {
+  text-decoration: none;
+  color: #f0361d;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: rgb(150, 0, 0);
+}
