--- a/src/app/main/about/about.component.html
+++ b/src/app/main/about/about.component.html
@@ -1,10 +1,11 @@
-<div style="max-width: 1250px; padding-top: 10px; margin: auto">
+<div style="max-width: 850px; padding-top: 10px; margin: auto">
   <div>
-    <mat-card id="about-card">
-      <mat-card-title style="font-size: xx-large">
+    <mat-card id="about-card" style="padding: 26px">
+      <mat-card-title style="font-size: 42px; margin: 26px">
         About ThriftyPrint
       </mat-card-title>
-      <mat-card-content style="margin-top: 20px">
+      <mat-divider inset="true"></mat-divider>
+      <mat-card-content style="margin: 26px">
         <p class="paragraph">
           The Thrifty Bot owns and operates multiple Markforged Onyx One desktop
           3D printers. This allows us to create parts made from Markforged Onyx.
