--- a/src/app/main/main/main.component.html
+++ b/src/app/main/main/main.component.html
@@ -133,9 +133,10 @@
                   class="form-control"
                   style="display: block"
                   type="number"
+                  min="1"
+                  max="100"
                   matInput
                   [(ngModel)]="model.quantity"
-                  name="units"
                   #quantity="ngModel"
                   [disabled]="!formDisplay"
                   (input)="updateTotal()"
